--- a/style.css
+++ b/style.css
@@ -32,14 +32,14 @@ button:hover {
     margin-right: auto;
     background-color: white;
     max-width: 400px;
-    height: 100vh;
+    height: 100dvh;
 }
 
 #saagh-coyrle {
     position: fixed;
     text-align: center;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     background-color: rgb(100, 100, 100, 0.5);
     z-index: 1000;
 }
