#cramman-reesht yrjid smoo 100px as oirr #coyle-toshiaght auto

--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ button:hover {
 }
 
 #coyrle-toshiaght {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 150px;
     background: white;
     width: 300px;
@@ -214,6 +216,8 @@ button:hover {
     border: 3px solid var(--doo);
     background-color: white;
     font-size: 20pt;
+    width: 150px;
+    max-height: 100px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
