--- a/style.css
+++ b/style.css
@@ -37,21 +37,18 @@ button:hover {
 }
 
 #saagh-coyrle {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
+    display: grid;
+    justify-items: center;
+    align-items: baseline;
     position: fixed;
     text-align: center;
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(100, 100, 100, 0.5);
     z-index: 1000;
 }
 
 #coyrle-toshiaght {
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 150px;
     background: white;
     width: 300px;
