--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ button:hover {
 }
 
 #saagh {
+    display: grid;
     height: 100dvh;
     background-color: white;
     max-width: var(--lheead);
@@ -40,6 +41,8 @@ button:hover {
 }
 
 #saagh-stoo-gamman {
+    grid-row: 1;
+    grid-column: 1;
     display: grid;
     grid-template-rows: 1fr 4fr;
     justify-items: center;
@@ -48,10 +51,11 @@ button:hover {
 }
 
 #saagh-coyrle {
+    grid-column: 1;
+    grid-row: 1;
     display: grid;
     justify-items: center;
     align-items: baseline;
-    position: absolute;
     text-align: center;
     width: 100%;
     height: 100%;
@@ -94,6 +98,7 @@ button:hover {
 #caslys {
     width: 100%;
     animation: agg-ec-jerrey 0.5s ease-out;
+    -webkit-animation: agg-ec-jerrey 0.5s ease-out;
     z-index: 1000;
 }
 
@@ -165,6 +170,7 @@ button:hover {
     margin-right: 1rem;
     text-align: center;
     animation: aase-agg 0.75s ease-in-out;
+    -webkit-animation: aase-agg 0.75s ease-in-out;
     border-radius: 50%;
     z-index: 4;
 }
@@ -172,6 +178,7 @@ button:hover {
 .bieauid {
     outline-color: var(--linney-mooie);
     animation: gaase 0.5s ease-out;
+    -webkit-animation: gaase 0.5s ease-out;
 }
 
 #pointyn {
@@ -185,6 +192,7 @@ button:hover {
     padding: 1rem;
     z-index: 2;
     animation: scughey 0.5s ease-out;
+    -webkit-animation: scughey 0.5s ease-out;
     border-radius: 50%;
     background-color: var(--linney-mooie);
 }
@@ -198,6 +206,7 @@ button:hover {
     border-radius: 50%;
     background-color: var(--loggyr);
     animation: scughey-loggyr 0.5s ease-out, daunsey 0.5s;
+    -webkit-animation: scughey-loggyr 0.5s ease-out, daunsey 0.5s;
     z-index: 3;
 }
 
@@ -222,6 +231,8 @@ button:hover {
     outline: 0px solid var(--linney-mooie);
     animation: agg-ec-jerrey 0.5s ease-out, groin 1.5s infinite;
     animation-delay: 0s, 0.4s;
+    -webkit-animation: agg-ec-jerrey 0.5s ease-out, groin 1.5s infinite;
+    -webkit-animation-delay: 0s, 0.4s;;
 }
 
 #cramman-reesht {
@@ -262,6 +273,7 @@ button:hover {
 .nyn-agg {
     background-color: var(--linney-mooie);
     animation: daunsey .5s infinite alternate steps(3);
+    -webkit-animation: daunsey .5s infinite alternate steps(3);
     padding: 10px;
     border-radius: 20px;
 }
